(fix): balance tooltip are showing behind topbar and cutting off - closes #3633

--- a/src/app/modules/wallet/v2/cash/balance/balance-cash.component.scss
+++ b/src/app/modules/wallet/v2/cash/balance/balance-cash.component.scss
@@ -29,10 +29,11 @@ m-walletBalance--cash {
       bottom: 18px;
       margin-left: 12px;
       min-width: 100px;
+      z-index: 99999;
     }
-    &::first-child {
+    &:first-child {
       .m-tooltip--bubble {
-        min-width: 150px;
+        min-width: 200px;
       }
     }
   }
